--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Parcel Sandbox</title>
+    <title>Vanilla Challenge</title>
     <meta charset="UTF-8" />
   </head>
 
   <body>
-    <h2>Hello!</h2>
+    <h1>Hello!</h1>
     <script src="src/index.js"></script>
   </body>
 </html>
