--- a/memo.html
+++ b/memo.html
@@ -112,3 +112,70 @@ HTML에서 title을 가지고 와야하고 유저명도 가져와서 해당 titl
 	1. document에서 항목들을 가지고 오는것.
 	2. 이 document 항목들을 변경하는 것.
 변경하는걸 배우기 전에 먼저 JS에서 HTML을 가져올 수 있는 다른 방법들을 배울 것이다.
+
+#3.2 Searching For Elements
+
+이전 영상에서 함수를 통해 id로 class name을 가져오거나 추가하고, text를 가져오거나 변경하는 방법에 대해 배웠다.
+id가 무엇이든 HTML에 정의된 id가 JS에서 같으면 상관 없다. 동일하지 않으면 못 가져온다.
+대부분의 경우에는 id를 추가하지 않는다.
+id는 사용하기 편리하지만 보통 className을 사용하거나 둘 다 사용하기 때문이다.
+
+H1을 이렇게 여러개 작성하고 새로고침 했을때
+
+이 오류가 뜨는 경우가 있다.
+코드 내에 어떤 값이 null이라는 뜻이다. 아무것도 없는 것(null)의 innerText를 접근하려고 한거다.
+title이 null이라는 말이다.
+class에 hello만 있는데 title은 something으로 일치하지 않기 때문이다.
+그러니까 title은 null인데 우린 지금 null의 innerText를 변경하려고 한 것이다.
+
+이제 hello class를 사용하는 방법에 대해 배우도록 하자.
+
+HTML에 있는 class name과 같아야 한다.
+
+
+
+이렇게 부르면 h1의 모든 elements가 나온다
+
+
+hellos로 뭘 가져올 수는 없다. 왜냐하면 이건 많은 h1이 들어있는 array이기 때문이다.
+가끔 많은 element를 한번에 가지고 와야하는 경우가 있다.
+그럴땐 getElementsByClassName()을 쓰면 된다.
+그런데 대부분의 경우에는 class name을 모든 곳에 추가하지는 않을 것이다.
+아마도 class name을 사용하고 또 다른 class name을 사용할 것이다.
+
+이제 할려고하는 것은 h1을 가져오는 것이다.
+
+
+이렇게 적어주면
+
+H1 하나만 적혀있는 array가 나왔다.
+이것도 원하는 형태가 아니다. 아직도 title.으로 뭔가 할 수 없기 때문이다.
+title이 title object가 아니고 array이기 때문이다.
+element를 가져오는 방법중 가장 나은것은 querySlector이랑 querySlectorAll 이다.
+querySelector는 element를 CSS 방식으로 검색할 수 있다.
+
+hello란 class 내부에 있는 h1을 가지고 올 수 있다는 것을 의미한다.
+그래서 우린 CSS slector를 사용해서 class hello를 찾고 그 안에 있는 h1을 가져와달라고 할 것이다.
+
+
+잘 불러오는 것을 확인할 수 있다.
+보다시피 이건 CSS처럼 쓸 수 있어서 더 효율성이 좋다.
+()안에 .을 쓰고 hello를 썼다. 왜냐면 이건 CSS selector이기 때문이다.
+
+이전에 getElementsByClassName() 함수를 사용할 때는 hello만 썼다.
+getElementsByClassName(“hello)
+왜냐면 JS에서 우리가 class name을 넘겨준다는 것을 알기 때문이다.
+하지만 querySelector에는 hello가 class name이라는 것과 그 안의 h1을 명시해줘야 한다.
+앞으로 계속 쓰게될 함수다.
+남은 모든 영상에서 document.querySelector()을 사용할 것이다.
+querySelector는 단 하나의 element를 return 해준다.
+element를 찾을 수 있다면 다른 모든 element도 찾을 수 있어야 한다.
+
+
+
+여러개가 있을때는 첫번째것만 나온다.
+querySelector를 사용할 때, hello class 안에 h1이 많을 수도 있다.
+조건에 맞으니까 다 가져올 수 있지만 실제로는 첫번째것만 가져왔다. 이게 중요하다. 첫번째거만 가져온다.
+만약 3개 모두 가져오고 싶다면 querySelectorAll이라고 하면 된다.
+querySelectorAll은 3개의 h1이 들어있는 array를 가져다 줄 것이다. (조건에 부합하는 모든 element)
+H1:first-child 같이 사용할 수도 있다는 뜻.
