--- a/memo.html
+++ b/memo.html
@@ -179,3 +179,88 @@ querySelector를 사용할 때, hello class 안에 h1이 많을 수도 있다.
 만약 3개 모두 가져오고 싶다면 querySelectorAll이라고 하면 된다.
 querySelectorAll은 3개의 h1이 들어있는 array를 가져다 줄 것이다. (조건에 부합하는 모든 element)
 H1:first-child 같이 사용할 수도 있다는 뜻.
+
+#3.3 Events
+
+꼭 이해해야 할 것은 app.js가 있기 때문에 JS를 통해 HTML의 내용을 가져올 수 있다는 것이다.
+우리가 app.js를 import하지 않았다면, 당연히 document는 여기 존재할 수도 없었다.
+포인트는 document가 HTML이 app.js를 load하기 때문에 존재하는 것이라는 거다.
+그 다음에 브라우저가 우리가 document에 접근할 수 있게 해준다.
+매우 중요한 내용.
+
+전 강의에서 JS의 두줄의 코드로 했던 것은 hello라는 class 내부의 h1을 가지고 오는 것이었다.
+지난 강의들에선 HTML에서 뭔가를 가져오는 것들을 배웠다.
+div나 h1같은tag name을 사용해서 검색하기도 했고, id를 가지고 검색하기도 했다.
+Class name을 가지고 검색하기도 했다. 전부 다른 function을 이용해서 말이다.
+배웠던 함수들 중에선 querySelector가 최고다. 왜냐면 앞서 나열한걸 모두 할 수 있기 때문이다.
+예를 들어 hello란 class를 가진 element를 하나 가지고 올 수 있다.
+섞어서 사용할 수도 있다. #id:first-child 이런식으로 말이다.
+Class hello를 가진 div 내부의 first-child인 h1을 찾아오는 것. 이건 정말 강력한 것이다.
+CSS selector를 전달할 수 있다는 거니까.
+JS는 여기 element에 접근하게 해주는 것이다.
+만약 element를 console.log로 출력해보면, 이런 결과를 얻게 된다. <h1>Hello</h1>
+만약 이 element의 내부를 보고 싶다면 console.log대신 console.dir()을 사용하면 된다.
+기본적으로 object로 표시한 element를 보여준다. 굉장히 많은 것들을 할 수 있다.
+내부 목록들을 보면 on으로 시작하는 것들이 굉장히 많은것을 볼 수 있다.
+
+on들은 event다. 이번에 이것들에 대해 배워본다.
+
+이 항목들이 전부 JS object라는 것을 이해하고 넘어가야 한다.
+우리는 JS object 내부에 있는 property들의 값들을 변경할 수 있다고 배웠다.
+특정 property들은 변경할 수가 없다.
+바꿀 수 있는 것도 있지만, 몇가지는 JS가 이걸 도대체 왜 바꾸는거야?? 하는거다.
+
+저기 중 가장 중요한건 “style”이다.
+style은 대문짝만한 h1 objet 내부에 있는 object이다.
+펼쳐보면 element의 style을 볼 수 있는데, JS형식으로 작성돼 있다.
+
+하지만 JS에서 대부분 작업할 일은, event를 listen하는 것이다.
+event란 예를 들어 클릭을 하면 그게 event다.
+h1위로 마우스가 올라가도 event다.
+만약 입력을 끝내거나, 이름을 적거나, enter를 누르는것 이런것들도 다 event다.
+event는 wifi접속이 해제될 경우 이런것들도 event가 될 수 있다.
+이 모든 event들을 JS는 listen할 수 있다.
+
+배울 event는 click event다.
+이론상 어디든지 클릭할 수 있다.
+이제 우린 클릭을 listen 해볼거다.
+title.addEventListener()를 작성한다.
+얘는 말 그대로 event를 listen하는 것이다.
+하지만 JS에 무슨 event를 listen하고 싶은지 알려줘야 한다.
+왜냐하면 모든 event에 대해 알고싶은 것이 아니고 단 하나의 event만 알아보고싶기 때문이다.
+
+
+이 코드의 의미는 title element를 찾을 방법을 배웠고 찾아왔다.
+그리고 eventListener를 생성했다. 여기서 click event를 llisten하고, 이 click event가 발생하면,
+우리는 handleTitleClick이라는 function이 동작하길 원한다.
+여기서 이 function을 실행하지 않게 하는 것이 굉장히 중요하다.
+설명했듯이, function을 실행시키고 싶다면 handleTitleClick()이렇게 해줘야한다고 했다.
+하지만 여기선 곧바로 실행시키고 싶지 않다.
+원하는 것은, 이 function을 JS에 넘겨주고, 유저가 title을 클릭할 경우에 JS가 실행버튼을 대신 눌러주길 바라는 것이다.
+즉, 내가 직접 실행버튼을 누르지 않고, JS에 이 function 이름을 넘겨줘서, 유저가 클릭할 경우에 유저가 title을 클릭할 경우에 JS가 실행버튼을 대신 눌러주는 것이다.
+()괄호를 추가함으로써 실행버튼을 누를 수 있다는거 기억하나??
+
+title이 클릭될때마다 기록하는 것을 볼 수 있다.(listen)
+
+이제 항상 이런 방식으로 사용할 것이다.
+title이란 HTML element가 하나 있다고 가정하고
+addEventListener를 호출하고, listen하고 싶은 event이름을 알려줄 것이다.
+event를 찾는 방법은 나중에 알게 될 것이다.
+그리고 이곳엔 event가 발생하면 호출할 function을 전달해주면 된다.
+handleTitleClick에 괄호를 넣지 않는다는거 잘 체크해라. 중요.
+우리는 실행시키길 원하지 않았다.
+우리는 JS에 function만을 넘겨주고, 유저가 클릭할 경우 JS가 실행버튼을 대신 눌러주길 바라는 것이다.
+
+영상에서 배운 것들을 종합해보자.
+유저가 만약 title을 클릭하면
+title.style.color = “blue”;라고 하고 동작시켜보면 클릭했을때 파란색으로 변하는걸 볼 수 있다.
+예를 들어 우리는 이 title을 color를 가지고 올 수도 있고, 변경할 수도 있다는 것이다.
+
+그리고 listen에 대해 배웠다.
+유저들의 행동들을 Listen할 수 있다.
+이 중 가장 기본적이고 이해하기 쉬운것은 바로 click event다.
+Click event를 listen하기 위해서는 HTML element를 가져와서 addEventListener function을 실행시켜주면 되는데,
+이곳에 어떤 event를 listen하고 싶은지 명시해줘야 한다.
+모든 event를 listen하고 싶진 않으니까.
+그리고 유저가 이 element에 해당 event를 했을때 어떤 함수를 실행 할지도 정해야한다.
+그리고 여기서 이 function의 실행버튼을 눌러선 안되고.
