--- a/memo.html
+++ b/memo.html
@@ -264,3 +264,28 @@ Click event를 listen하기 위해서는 HTML element를 가져와서 addEventLi
 모든 event를 listen하고 싶진 않으니까.
 그리고 유저가 이 element에 해당 event를 했을때 어떤 함수를 실행 할지도 정해야한다.
 그리고 여기서 이 function의 실행버튼을 눌러선 안되고.
+
+#3.4 Events part II
+
+listen하고 싶은 event를 찾는 가장 좋은 방법은 구글의 찾고싶은 element의 이름
+예를 들어 h1 element를 MDN에 검색해보는 것이다.
+당연히 이곳에서 HTML에 대한 설명을 해줄 것이다.
+링크에 Web ApIs라는 문장이 포함된 페이지를 찾을 것이다.
+이건 JS관점에서의 HTML Heading Element란 의미이기 때문이다.
+만약 이걸 들여다보고싶지 않다면
+console.dir을 통해 element를 console에 출력시켜준다.
+그럼 엄청 많은 property를 출력해 줄거다.
+사용 가능한 event는 여기서 찾을 수 있다.
+Property 이름 앞에 on이 붙어있다면, 그게 바로 event listener이다.
+event를 사용할 때는 예를들어 onabort가 있으면 abort로 사용해줘야 한다.
+click도 마찬가지. onclick에서 click만.
+이 말은 click event를 부여할 수도 있고, change event를 부여할 수도 있다.
+
+특정한 event를 listen해볼거다.
+마우스가 title위에 올라갈때, 클릭은 하지 않고 그냥 위에 위치할때 event.
+mouseenter라고 불리는 event이다. 
+Function 이름은 굳이 handtiteclick  이런식으로 짓지 않아도 된다. 어떻게 지어도 상관 없다.
+하지만 뭘 하고 있는지 제대로 알기 위해 명확하게 짓는 것이 좋다.
+그리고 이 function을 여기 addEventListener에게 전달해 줄 것이다.
+테스트 해보면 JS가 두 event를 listen하고 있는 것을 볼 수 있다.
+
