--- a/memo.html
+++ b/memo.html
@@ -289,3 +289,64 @@ Function 이름은 굳이 handtiteclick  이런식으로 짓지 않아도 된다
 그리고 이 function을 여기 addEventListener에게 전달해 줄 것이다.
 테스트 해보면 JS가 두 event를 listen하고 있는 것을 볼 수 있다.
 
+
+#3.5 More Events
+
+event들은 그저 클릭,엔터, 리브 정도만 처리하는게 아니기 때문에 더 알 필요가 있다.
+
+해볼라고 하는건 window의 interface 또는 object이다.
+window는 브라우저 창을 의미한다.
+우리가 할건 event 내부를 살펴보고, event를 listening하는 또다른 방법을 배워볼 것이다.
+Event를 사용하는데 2가지 방법이 있다.
+
+첫번째는 title.addEventListener()를 해주고, click을 넘겨주는 거
+근데 title.onclick() 이런식으로 바꿀 수 있다.
+title.addEventListener("click", handleTitleClick); 이거랑
+title.onclick = handleTitleClick;이랑 같다.
+
+이번엔 window의 event를 한번 listen해보자.
+Device motion - 모바일이 움직이거나 할 때 발생하는 event
+window는 document가 JS에서 기본적으로 제공되듯이 window도 기본적을 제공한다.
+Resize-
+
+
+여기서 body가 중요하다. 
+h1처럼 document 밑으로 가져올 순 없다.
+만약 document.title을 호출하면, 가져와야할 title이 아닌 이 위에 있는 코드의 function 속에 있는 title을 가져올 것이다.
+그러므로 title을 h1으로 다 바꿔주자. h1은 title이랑 다르니까.
+코드를 맞게 작성 했다면 이제 event를 하나 더 listen하고 있고, resize event이다.
+하지만 h1을 resize할 수는 없고, window를 resize 할 수는 있다.
+이제 window element의 resize event를 listen하고 있고,
+만약 이  event가 발생한다면 handleWindowResize가 실행될 거고,
+이 handleWindowResize function은 body의 backgroundColor를 변경할 것이다.
+전에 말했듯이 콘솔에서 body에 매우 쉽게 접근할 수 있다.
+Body는 특별하기 때문에 콘솔에서 body를 호출할 수 있다.
+
+불러와보면 backgroundcolor가 tomato로 돼있는걸 볼 수 있다. 
+콘솔에서 가져올 수 있는건 이게 다이다.
+예를 들어 document.div 이런식으로는 가져오로 수 없다. 심지어 이건 존재하지도 않는거.
+Document의 body, head, title 이런것들은 중요하기 때문에 이렇게 존재하는거고
+나머지 element들은 querySelector나 getElementByld등으로 찾아와줘야 한다.
+
+Wifi event에 대해 알아보자
+이건 animation을 위한 것이다.
+잠시 copy를 살펴보자. -해당 event는 유저가 copy 행위를 했을 때 발생한다.
+
+
+이런식으로.
+우린 copy event를 listen해서 이 event를 처리하는 것이다.
+이건 h1에서 발생한 event가 아니고 window에서 발생한 event지만, 패턴은 똑같다.
+
+element를 찾아서 event listener를 추가하고 event가 발생하면 반응을 해주는 것이다.
+
+이번엔 우리가 wifi에 연결 돼있는지 브라우저가 알 수 있게하는 event에 대해 알아보자.
+
+
+
+이렇게 되면 마우스 올리기 전 grab me
+마우스 올리면 mose here!
+떼면 gone!
+복붙 행위하면 경고문
+와이파이 끊기면 SOS 경고문
+연결되면 ALL GOOD 창
+이 나오게 하는 코드를 짠 것이다.
