--- a/memo.html
+++ b/memo.html
@@ -1,3 +1,77 @@
+#2.9 Recap
+데이터 타입은, JS가 이해할 수 있는 데이터의 종류들이다.
+우리가 아는건 string인데, “text”인 것이다.
+string은 ‘로 시작해서 ‘로 끝나면 된다. 아니면 “로 시작해서 “로 끝나야 한다.
+
+숫자도 있다. JS는 이 숫자들로 뭘 해야할지 알고 있다.
+여기서 좋은 점은 데이터를 저장할 수 있다는 점이다.
+데이터를 적어둔 다음 variable에 저장할 수 있다.
+	• variable을 만드는 2가지 방법
+	1. Const a = 5; 라고 하는것.
+그럼 console.log(a)라고 하면 JS가 5를 출력한다.
+즉 a를 참조할 때 실제로 가서 a의 값을 확인하는 것이다. ->5
+
+문제는 가끔 variable값을 업데이트 하고 싶을 때가 분명 있을 것이다.
+
+예를 들어
+Const isHongTakFat = true;
+라는 값을 쳤다가
+나중에 false라고 업데이트하고 싶은데 const 때문에 업데이트할 수가 없다. 그래서 이럴때 let을 사용한다.
+let은 const와 동일한 일을 하고, HongTak이 뚱뚱하다는 걸 기억하고 있다.
+a가 5라고 기억하는 것처럼.
+근데 let과 const의 차이는 let은 업데이트를 할 수 있다는 것이다.
+따라서 variable을 업데이트하고 싶다면, variable 앞에 let을 사용해서 생성해야 한다.
+물론 한번 위에 let을 사용하고 나면 밑에선 다시 쓰지 않아도 된다.
+왜냐면 variable을 업데이트 하는 것이기 때문이다. 매우 다른 것이다.
+
+그리고 규칙을 기억해야 한다. 
+항상 const를 사용하되 가끔씩 필요하다면 let을 사용하고, 절대 var을 사용하지 말것.
+var은 오래된 JS이고, JS는 프랑켄슈타인 같아서 새로운 것을 오래된 것 위에 쌓아갈 수 밖에 없다.
+오래된 것을 없애버릴 수는 없다.
+var은 과거의 것이고, var은 let 같은 거지만
+var을 쓰면 let, const처럼 구분할 수 없게 된다. 
+코드는 읽었을때 어떠한 의미를 얻을 수 있다면 바람직한 코드이다.
+
+Var Never, Always const, sometimes let, NEVER var!
+
+Const a = true;
+true와 false는 boolean이다. “True”,”false”는 text.
+1,과 0. On과 Off. true와 false
+숫자는 무한하고 문자는 뭐든 자유롭게 적을 수 있지만 boolean은 두가지 옵션만 있다. true와 false.
+
+Const a = null;
+비어있음 의미. 이건 때때로 코드 안에서 작성해야 한다.
+만약 variable 안에 아무것도 없다는 것을 확실히 해두고 싶을때.
+따라서 null은 변수에 할당되는 값이다.
+프로그래머가 null이라고 작성해 말 그대로 여기는 “비어있다”고 하고 싶을때 사용
+“비어있음”은 이 자체로 존재하는 것이다. 존재는 하는데 내용이 빈거.
+
+Undefined
+변수에 값을 부여하지 않은 상태.
+만약 let hello;라고 값을 주지 않고 console.log로 hello를 하게 될 경우, 새로고침하면 undefined라는 값을 출력한다.
+이 말은 hello가 존재하지만, 안에 아무것도 없다는 말이다.
+더 나은 표현으로 값이 없다는 것이다. 아예 없다는 말.
+null과는 다른 것이다.
+
+JS는 null과 undefined가 있는데 모든 프로그래밍 언어가 그런건 아니다.
+이 외 다른 것들, 문자인 string, 숫자, boolean과 null은 모든 프로그래밍 언어가 가지고 있는 타입이다.
+하지만 Undefined는 매우 이상한 타입이라 이걸 가지고 있는 언어는 많지 않다.
+예시로 파이썬에선 nulle대신 none이 있고 go에는 nil이 있다.
+
+때때로 하나의 variable안에 많은 수의 데이터를 가지고 싶을 수 있다.
+가장 좋은 예시 중 하나는 한 주의 요일을 저장하는 것.
+
+그래서 일종의 list, 다른말로 array라는 것을 만들고 단지 대괄호를 작성하면 되는 것이다.
+Const days = [];
+이걸로 array를 생성한 것이다.
+
+
+
+
+
+
+
+
 +
 JS와 HTMLdl 서로 어떻게 작동하는지에 대해 배웠다
 +
