--- a/index.html
+++ b/index.html
@@ -3,10 +3,23 @@
   <head>
     <title>Vanilla Challenge</title>
     <meta charset="UTF-8" />
+    <link rel="stylesheet" href="src/style.css" />
   </head>
 
   <body>
-    <h1>Hello!</h1>
+    <
+    <form>
+      <h1>🂡Random Number Game</h1>
+      <h2>
+        Generate a number between 0 and
+        <input id="rangeNumInput" type="number" />
+      </h2>
+      Guess the number: <input id="userNumInput" type="number" />
+      <button id="play">Play!</button><br />
+      <div id="result" class="hidden"></div>
+      <div id="win" class="hidden"><strong> You won!</strong></div>
+      <div id="loose" class="hidden"><strong> You loose!</strong></div>
+    </form>
     <script src="src/index.js"></script>
   </body>
 </html>
