--- a/index.html
+++ b/index.html
@@ -1,25 +1,15 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Vanilla Challenge</title>
+    <link src="" href="style.css" />
+    <title>Time Until Christmas</title>
     <meta charset="UTF-8" />
-    <link rel="stylesheet" href="src/style.css" />
   </head>
-
   <body>
-    <
-    <form>
-      <h1>🂡Random Number Game</h1>
-      <h2>
-        Generate a number between 0 and
-        <input id="rangeNumInput" type="number" />
-      </h2>
-      Guess the number: <input id="userNumInput" type="number" />
-      <button id="play">Play!</button><br />
-      <div id="result" class="hidden"></div>
-      <div id="win" class="hidden"><strong> You won!</strong></div>
-      <div id="loose" class="hidden"><strong> You loose!</strong></div>
-    </form>
-    <script src="src/index.js"></script>
+    <h1>Time Until Christmas</h1>
+    <h2 class="js-clock"></h2>
+    <script src="index.js"></script>
   </body>
 </html>
+
+<!-- 5월1일 바닐라 JS챌린지 시계만들기 -->
