--- a/챌린지 코드 메모/memo.html
+++ b/챌린지 코드 메모/memo.html
@@ -285,7 +285,7 @@ on들은 event다. 이번에 이것들에 대해 배워본다.
 
 저기 중 가장 중요한건 “style”이다.
 style은 대문짝만한 h1 objet 내부에 있는 object이다.
-펼쳐보면 element의 style을 볼 수 있는데, JS형식으로 작성돼 있다.
+펼쳐보면 element의 style을 볼 수 있는데, JS형식으로 작성되어 있다.
 
 하지만 JS에서 대부분 작업할 일은, event를 listen하는 것이다.
 event란 예를 들어 클릭을 하면 그게 event다.
