--- a/챌린지 코드 메모/memo.html
+++ b/챌린지 코드 메모/memo.html
@@ -292,7 +292,7 @@ event란 예를 들어 클릭을 하면 그게 event다.
 h1위로 마우스가 올라가도 event다.
 만약 입력을 끝내거나, 이름을 적거나, enter를 누르는것 이런것들도 다 event다.
 event는 wifi접속이 해제될 경우 이런것들도 event가 될 수 있다.
-이 모든 event들을 JS는 listen할 수 있다.
+이 모든 event들을 JS는 listen할 수 있다. Super Cool!
 
 배울 event는 click event다.
 이론상 어디든지 클릭할 수 있다.
