--- a/챌린지 코드 메모/memo.html
+++ b/챌린지 코드 메모/memo.html
@@ -336,7 +336,8 @@ Click event를 listen하기 위해서는 HTML element를 가져와서 addEventLi
 이곳에 어떤 event를 listen하고 싶은지 명시해줘야 한다.
 모든 event를 listen하고 싶진 않으니까.
 그리고 유저가 이 element에 해당 event를 했을때 어떤 함수를 실행 할지도 정해야한다.
-그리고 여기서 이 function의 실행버튼을 눌러선 안되고.
+그리고 여기서 이 function의 실행버튼을 눌러선 안되고. 
+이 다음부턴 다음 챕터에서.
 
 #3.4 Events part II
 
