--- a/챌린지 코드 메모/memo.html
+++ b/챌린지 코드 메모/memo.html
@@ -366,7 +366,7 @@ Function 이름은 굳이 handtiteclick  이런식으로 짓지 않아도 된다
 
 #3.5 More Events
 
-event들은 그저 클릭,엔터, 리브 정도만 처리하는게 아니기 때문에 더 알 필요가 있다.
+event들은 그저 클릭,엔터, 리브 정도만 처리하는게 아니기 때문에 조금 더 알아볼 필요가 있다.
 
 해볼라고 하는건 window의 interface 또는 object이다.
 window는 브라우저 창을 의미한다.
