--- a/챌린지 코드 메모/4월 25일.html
+++ b/챌린지 코드 메모/4월 25일.html
@@ -34,7 +34,8 @@ document는 많은 것들이 들어있는 object이다.
 이게 중요한 이유는 JS에어 HTML document객체로부터 title을 가지고 올 수 있기 때문이다.
 JS는 HTML에 접근하고 읽을 수 있게 설정되어 있다. JS는 HTML을 읽어오는 것이다. 
 자동적으로 되는거니까 아무것도 해줄 필요 없다. 
-브라오저가 HTML정보가 아주 많이 들어있는 document라는 object를 전달해주는 것이다.
+
+브라우저가 HTML정보가 아주 많이 들어있는 document라는 object를 전달해주는 것이다.
 콘솔에서 보여지는 것은 HTML코드를 JS관점에서 보고있는 것이다.
 
 생각해보면 Object에서 properties를 가지고 올 수 있다. 값을 바꿀 수도 있다.
@@ -45,30 +46,31 @@ HTML에서 정보를 가져올 수 있다는 것과 JS코드에서 그 항목들
 
 document는 모든것의 시작이다. 왜냐하면 document는 web site를 의미하기 때문이다.
 
-
+++
 #3.1 HTML in JavaScript
 
 이젠 특정한 뭔가를 가져오는걸 배울 것이다.
 JS로 정보를 가지고 올 수 있는 방법은 document객체와 element를 가져오는 수많은 함수들을 이용하는 것이다.
 이번에 배우는 것은 정말 많이 사용할 요소이다.
+
 Document.getElementByID(“title)을 콘솔에 쳐보면 null이 나온다.
 파일을 저장은 했지만 새로고침하지 않았기 때문이다.
 새로고침하고 다시 쳐보면 JS로 id=“title”을 가진 <h1>태그를 가져오는걸 볼 수 있다.
 
 console.log 대신 console.dir을 써보면 <h1>태그로 할 수 있는 목록들이 나온다.
-￼
-￼
-요런식. <h1> title 하나에서 엄청 많은 것들을 가져올 수 있다.
+
+<h1> title 하나에서 엄청 많은 것들을 가져올 수 있다.
 여기서 특별히 중요한 것들은 textContent의 “Grab me!” 같은 거다.
-￼
+
 JS에서 HTML을 읽을 수 있다는 것을 알 수 있다.
-￼
+
  다 배워야할 것들..
 저 목록들은 HTML에 표현되어있는 것이다.
 예를들어 autofocus: false
-￼
+
 html에서 <h1>태그에 autofucs를 적어주고 콘솔에서 확인해보면 true가 된걸 볼 수 있다.
 그러니 이게 얼마나 강력하고 중요한건지 이해해야 한다.
+
 지금 하고 있는건 HTML을 가지고 오는거지만, 그걸 JS에서 하고 있는 것이다.
 JS는 이 HTML element를 가지고 오지만, HTML 자체를 보여주지는 않는다.
 JS는 이 object를 보여준다. (JS에서 이 HTML을 표현하는 object를)
