--- a/챌린지 코드 메모/4월 25일.html
+++ b/챌린지 코드 메모/4월 25일.html
@@ -77,44 +77,41 @@ JS는 이 object를 보여준다. (JS에서 이 HTML을 표현하는 object를)
 
 다음 class=“hello”를 추가해본다.
 그러고 새로고침을 하고 class를 찾아보면 className이 hello인걸 확인할 수 있다.
-￼
-￼
 
 이 내용으로 빗대어 우리가 className같은 항목들을 가지고 올 수 있다는 것을 의미한다.
 또는 autofocus. 하지만 우리는 여기서 이것들을 바꿀 수도 있다.
 예시로 innerText를 수정해보자. 현재 “Grab me!”라고 되어있는 상태.
-￼
-￼
-이렇게 적고나면
-￼
-GOT YOU!가 나온걸 볼 수 있다. 
+이렇게 적고나면 GOT YOU!가 나온걸 볼 수 있다. 
 이 텍스트는 JS에 의해 변경됐다. HTML에 의해 변경된게 아님.
+
 이게 가능한 이유는, h1태그에 id를 추가했기 때문이고
 JS에서 element를 가져왔기 때문이다. (“Title”)
 이 element는 getElementByld란 함수로 가져온거다.
 이건 document의 함수이고 document는 HTML을 뜻한다.
 확인할 수 있듯이, 우리는 JS에서 title이란 항목을 가져오고 있다.
+
 JS에선 이 h1의 className을 확인할 수 있다.
 또한 h1의 id도 확인할 수도 있다.
 Console.log()로 원하는 것 모두 확인해 볼 수 있다.
-￼
 적고 콘솔 확인해보면
-￼
 title은 나오고 className은 보이는거 같이 비어있다.
+
 하지만 h1태그에서 className을 추가하면
-￼
 추가된걸 볼 수 있다.
 
 HTML이 있는데 쓸모가 없다. 우린 이 HTML을 JS에서 읽어올 수 있어야 한다.
 그래서 이전 영상에서 HTML과 상호작용을 가능하게 해주고
 브라우저에서 그냥 사용할 수 있는 object를 배웠다.
+
 그리고 document의 함수 중엔 getElementByld라는 함수가 있다.
 이 함수는 HTML에서 id를 통해 element를 찾아준다.
 예시에선 title이란 id를 가지고 있다.
+
 당연히 title이란 id를 가진 element가 없는 경우에는 아무것도 찾지 못한다.
 element를 찾고나면, 그 HTML에서 뭐든지 바꿀 수 있다. 
 예를 들어, element의 innerText를 바꿀 수도 있고
 id와 className을 가져올 수도 있다.
+
 그래서 여기 있는 HTML의 class인 hello가 새로고침하면 콘솔에 표시되는 것이다.
 이게 어떻게 동작하는지 명확하게 이해하고 넘어가는것이 매우!매우! 중요하다.
 모든 것들이 이 개념으로 시작하기 때문이다.
