--- a/챌린지 코드 메모/memo.html
+++ b/챌린지 코드 메모/memo.html
@@ -1,35 +1,30 @@
+++
 #2.9 Recap
 데이터 타입은, JS가 이해할 수 있는 데이터의 종류들이다.
-+
 우리가 아는건 string인데, “text”인 것이다.
-+
 string은 ‘로 시작해서 ‘로 끝나면 된다. 아니면 “로 시작해서 “로 끝나야 한다.
-+
 숫자도 있다. JS는 이 숫자들로 뭘 해야할지 알고 있다.
-+
 여기서 좋은 점은 데이터를 저장할 수 있다는 점이다.
-+
+
 데이터를 적어둔 다음 variable에 저장할 수 있다.
 	• variable을 만드는 2가지 방법
 	1. Const a = 5; 라고 하는것.
 그럼 console.log(a)라고 하면 JS가 5를 출력한다.
 즉 a를 참조할 때 실제로 가서 a의 값을 확인하는 것이다. ->5
-+
+
 문제는 가끔 variable값을 업데이트 하고 싶을 때가 분명 있을 것이다.
-+
 예를 들어
 Const isHongTakFat = true;
-라는 값을 쳤다가
-+
-나중에 false라고 업데이트하고 싶은데 const 때문에 업데이트할 수가 없다. 그래서 이럴때 let을 사용한다.
+라는 값을 쳤다가 나중에 false라고 업데이트하고 싶은데 const 때문에 업데이트할 수가 없다. 
+그래서 이럴때 let을 사용한다.
 let은 const와 동일한 일을 하고, HongTak이 뚱뚱하다는 걸 기억하고 있다.
 a가 5라고 기억하는 것처럼.
-+
+
 근데 let과 const의 차이는 let은 업데이트를 할 수 있다는 것이다.
 따라서 variable을 업데이트하고 싶다면, variable 앞에 let을 사용해서 생성해야 한다.
 물론 한번 위에 let을 사용하고 나면 밑에선 다시 쓰지 않아도 된다.
 왜냐면 variable을 업데이트 하는 것이기 때문이다. 매우 다른 것이다.
-+
+
 그리고 규칙을 기억해야 한다. 
 항상 const를 사용하되 가끔씩 필요하다면 let을 사용하고, 절대 var을 사용하지 말것.
 var은 오래된 JS이고, JS는 프랑켄슈타인 같아서 새로운 것을 오래된 것 위에 쌓아갈 수 밖에 없다.
