--- a/챌린지 코드 메모/4월29일.html
+++ b/챌린지 코드 메모/4월29일.html
@@ -1,6 +1,6 @@
 [4월29일]
 
-#.4.0 Input Values
+++ #.4.0 Input Values
 
 이제 앱을 한번 만들어보자. 
 CSS랑 JS 완전히 지우고 시작하자
@@ -80,7 +80,7 @@ Hello뒤에 아무것도 없는 채로 콘솔에 표시되는걸 볼 수 있다.
 수많은 if else를 활용해서 뭘 할 수 있을지 살펴보자
 
 
-#4.1 Form Submission
+++ #4.1 Form Submission
 
 이번엔 username의 유효성을 검사할 것이다. 우선 Username이 비어있으면 안되고, 너무 긴 Username도 안된다. 좀 더 확실하게 하기 위해서다.
 매번 loginInput.value를 적는거 대신 우리는 const로 변수로 만들어 줄 것이다.
@@ -225,7 +225,7 @@ Submit event가 발생할때 JS는 onLoginSubmit function을 호출하고 있고
 기본동작이 실행되는걸 막아주고 있다.
 아직 좀 헷갈릴 수 잇다. 이제 가장 기본적인 동작을 막아볼텐데, 그 중  링크를 클릭하는 동작이다.
 
-#4.3 Events part II
+++ #4.3 Events part II
 
 이번엔 from 관련 내용으로 쉬어가는 코너이다. 어렵기 때문에.
 Nomadcoders.co로 연결되는 anchor요소를 하나 만들어 줄 것이다.
