--- a/챌린지 코드 메모/4월29일.html
+++ b/챌린지 코드 메모/4월29일.html
@@ -194,11 +194,14 @@ argument를 추가해보자. 이름은 뭐가 되든 좋다.
 뭔가 정보를 얻고 있는걸 확인할 수 있다.
 onLoginSubmit function에 대한 argument로 말이다.
 이 info argument에 포함된 정보로 이것저것 하게 될거니까 이 부분을 제대로 이해하고 넘어가야 한다.
-우리가 지금 하고 있는건 onLoginSubmit이라는 function을 만들고 이 function이 하나의 argument를 받도록 하고 있는 것이다.
+우리가 지금 하고 있는건 onLoginSubmit이라는 function을 만들고 
+이 function이 하나의 argument를 받도록 하고 있는 것이다.
 지금 저기 적은 function이 하나의 argument를 받도록 하고 그걸 JS에 넘겨주고 있다.
+
 누군가 form을 submit하면 JS가 이 function을 호출하도록 하고 있는 것이다.
 JS는 우릴 너무 사랑해서 funtion을 이 상태로 호출하지 않는다.
-JS는 여기에서 onLoginSubmit함수의 첫번째 arugument로 발생한 일에 대해 내가 필요로 할만한 정보들을 주는 것이다. 지금 작성한 코드가 하고 있는 일이다.
+JS는 여기에서 onLoginSubmit함수의 첫번째 arugument로 발생한 일에 대해 내가 필요로 할만한 정보들을 주는 것이다. 
+지금 작성한 코드가 하고 있는 일이다.
 
 모든 EventListener function의 첫번째 argument는 항상 지금 막 벌어진 일들에 대한 정보가 될 것이다. 
 JS가 우리에게 이 정보를 무료로 제공한다. 우리는 공간만 제공하면 된다. 
