--- a/챌린지 코드 메모/4월29일.html
+++ b/챌린지 코드 메모/4월29일.html
@@ -215,10 +215,12 @@ preventDefault()는 뭐하는 걸까.
 이 function의 기능은 어떤 event의 기본 행동이든지 발생하지 않도록 막는 것이다.
 아까 말했듯 기본동작이란 어떤 function에 대해 브라우저가 기본적으로 수행하는 동작이다.
 누군가 form을 submit하면 브라우저는 기본적으로 페이지를 새로고침 하도록 되어있다.
+
 이 function을 추가함으로써 그 기본 동작을 막고 있는 것이다.
 그리고 이건 EventListener함수의 첫번째 argument 안에 있는 function이다.
 EventListener에 어떤 function을 추가하던 간에 JS는 공짜로 첫번째 argument로 발생된 event에 대한 정보를 줄 것이다.
-이건 선택사항이다. 필요없다면 그냥 둬도 괜찮다. () 이렇게하면 아무런 정보를 받지 않겠다는거고 (info)이렇게 공간을 만들어주면 JS에서 event를 채워줄 것이다.
+이건 선택사항이다. 필요없다면 그냥 둬도 괜찮다. () 이렇게하면 아무런 정보를 받지 않겠다는거고 (info)이렇게 
+공간을 만들어주면 JS에서 event를 채워줄 것이다.
 이제 info를 event로 바꿔줄건데 보통 이렇게 작성하는게 관행이다.
 
 이번 강의에서, 우리는 말 그대로 아무것도 안하더라도 아무것도 하지 않음으로써, JS가 어떤 정보를 담은 채로 function을 호출한다는 것을 배웠다. (Event objet를 담은 정보)
