--- a/챌린지 코드 메모/4월29일.html
+++ b/챌린지 코드 메모/4월29일.html
@@ -248,10 +248,12 @@ Nomadcoders.co로 연결되는 anchor요소를 하나 만들어 줄 것이다.
 
 alert가 이 페이지가 다른 동작을 하지 못하도록 막고 있다. 아무일도 안 일어나고 있지만 확인을 눌러서 alert가 없어지면 이 브라우저의 기본동작이 실행되는걸 볼 수 있다.
 alert는 특이한 애라 모든 동작들을 막는다. 그래서 이제 아무도 alert를 사용하지 않는다.
-JS가 EventListener를 만들고 거기에 함수를 줬다는걸 보게되면, JS는 누군가 링크를 클릭할 때, 날 위해 함수를 실행시키게 될거다.
+JS가 EventListener를 만들고 거기에 함수를 줬다는걸 보게되면, JS는 누군가 링크를 클릭할 때, 
+날 위해 함수를 실행시키게 될거다.
 계속 반복해서 말하는 이유는 그만큼 중요하기 때문이다. 
 ()를 추가하면 이 함수는 한번만 실행되고 그걸로 끝이다. 
 나는 JS한테 함수의 이름만 주고 실행하는건 JS의 몫이다.
+
 가끔은 뭐가 클릭됐는지 어디가 클릭됐는지 등 정보를 알고 싶을때가 있다. 그럴때 JS는 단순히 함수를 실행시키기만 하는게 아니라
 JS는 함수를 실행시키는 동시에 그 함수에 첫번째 인자로 object를 넣어줄 것이다. 그게 규칙이다.
 그리고 이 object에는 방금 일어난 event에 대한 여러 정보가 담겨있다. 이건 JS가 우리한테 공짜로 주는 것이다.
@@ -279,17 +281,16 @@ path를 보면 우리가 클릭할 때 무슨 일이 있었는지, 어디서 발
 
 가장 중요한건 addEventListener안에 있는 함수는 직접 실행하지 않았다는 것이다.
 
-#4.4 Getting Username
+++ #4.4 Getting Username
 
 이제 우리가 하고 싶은건 유저가 이름을 제출하면, form을 없애주는걸 하고 싶다.
 이걸 구현하기 위한 방법
+->
 1,  HTML 요소 자체를 없애는것.
 2, CSS로 숨기기
 어떤 요소에게든 이 classname을 주면 그 요소를 숨기게 될 것이다.
 단순히 hidden이라는 classname을 더해주면 된다.
-
 우리는 유저가 이름을 form을 통해 제출했을 때, 기본동작은 막아주면서 내용은 기록하는것
-
 이렇게 입력하고 테스트해보면 form은 사라졌지만 입력값은 console에 기록된걸 볼 수 있다.
 
 이제 다른 요소를 추가해보자. 이 요소는 h1이고 내용은 비워둘거다. 비워둔 채로 둘거지만 h1이 될 것이다.
