--- a/챌린지 코드 메모/4월29일.html
+++ b/챌린지 코드 메모/4월29일.html
@@ -303,17 +303,13 @@ path를 보면 우리가 클릭할 때 무슨 일이 있었는지, 어디서 발
 기본동작은 실행되지 않도록 막아주고, hidden이라는 class name을 더해줘서 form을 숨기고, 유저의 이름을 변수로 저장해주고, 그 이름은 h1안에 넣어줄거다.
 
 일단 greeting이란 id를 추가해줄 것이다.
-
-
 그리고 다시 JS로 돌아와서 이 id를 찾아줄 것이다.
-
 이럼 준비가 거의 다 됐다. 하나 빼먹은게 있다.
 
 Css까지.
 이러고 실행시켜보면 form이 숨겨지는걸 볼 수 있다.
 
 element를 살펴보면
-
 class=“hidden”이 추가됐고 h1 안에는 “Hello Nico”가 들어갔다.
 잘 작동하는데 또 h1에서 hidden class 빼는걸 깜빡했다.
 
@@ -330,25 +326,27 @@ HTML을 살펴보면 단순히 classname을 추가해주고 삭제하고 할 뿐
 하지만 보다시피 잘 작동한다.
 
 짚고 넘어가야할 것이 있는데, JS를 살펴보면 string 두개의 조합이 있다.
-
 지금 하고 있는건 두 개의 string을 합치는 거다. Hello 띄고 username. 이렇게 합치는 것도 하나의 방법이다.
 근데 이건 효율적이지 못하다. 간격도 기억해야하고 +도 보기 안좋다.
 대체하는건 ‘’이다. 우리가 전에 했던 방식 대신에 ‘Hello ${username}’;이다.
 이 방법 모두 똑같은 동작을 수행할 것이다. 둘 다 Hello 다음에 한칸 띄우고 username 변수의 값을 표시해 줄거다.
 
 후자의 방식이 더 최근 방식인데 얘는 2가지 규칙이 있다.
+->
 1, 만약 변수와 string을 결합하고 싶다면 또는 string안에 집어넣고 싶다면 ${변수명} 이렇게 표현하면 끝이다.
 뒤에 뭘 추가해도 상관없고 이 부분만 JS가 변수값으로 바꿔줄 것이다.
 2, 가장 중요한 규칙. 따옴표들 아니고 백틱이다. `` 이거. 
+
 일반 따옴표란 ${}을 같이 사용하면, 변수값은 전혀 반영되지 않는다.
 백틱을 써야 변수값이 string으로 입력될 것이다.
+
 
 `` $ {} !!
 이걸로 유저한테 인사하는 작업은 끝냈다.
 근데 문제는 우리가 유저를 전혀 기억할 수 없다는 것이다. 새로고침 할때마다 새로 로그인해야한다.
 새로고침할 때도 form을 볼 필요 없이 이름이 저장되어 있으면 좋겠다. 그걸 다음 강의에서 할거다.
 
-#4.5 Saving Username
+++ #4.5 Saving Username
 
 유저에게 매번 질문하기 번거롭기 때문에 value를 기억하는 방법을 배운다.
 항상 그랬듯이 뭔가를 저장하는건 아주 많이 사용되는 기능이다. 유저의 이름이나 뭐가 되던간에.
