--- a/챌린지 코드 메모/memo.html
+++ b/챌린지 코드 메모/memo.html
@@ -1,5 +1,5 @@
-++
-#2.9 Recap
+++#2.9 Recap
+
 데이터 타입은, JS가 이해할 수 있는 데이터의 종류들이다.
 우리가 아는건 string인데, “text”인 것이다.
 string은 ‘로 시작해서 ‘로 끝나면 된다. 아니면 “로 시작해서 “로 끝나야 한다.
