--- a/챌린지 코드 메모/memo.html
+++ b/챌린지 코드 메모/memo.html
@@ -67,7 +67,6 @@ JS는 null과 undefined가 있는데 모든 프로그래밍 언어가 그런건 
 Const days = [];
 이걸로 array를 생성한 것이다.
 
-
 JS와 HTMLdl 서로 어떻게 작동하는지에 대해 배웠다
 HTML은 접착제 같은 것이다. HTML이 JS를 가져오기 때문이다
 JS를 사용하는 이유는, HTML과 상호작용하기 때문이다
@@ -99,8 +98,7 @@ JS는 이미 HTML에 연결되어 있다.
 HTML에서 정보를 가져올 수 있다는 것과 JS코드에서 그 항목들을 볼 수 있다는 것을 배웠다.
 document는 모든것의 시작이다. 왜냐하면 document는 web site를 의미하기 때문이다.
 
-++
-#3.1 HTML in JavaScript
+++ #3.1 HTML in JavaScript
 
 이젠 특정한 뭔가를 가져오는걸 배울 것이다.
 JS로 정보를 가지고 올 수 있는 방법은 document객체와 element를 가져오는 수많은 함수들을 이용하는 것이다.
@@ -110,7 +108,6 @@ Document.getElementByID(“title)을 콘솔에 쳐보면 null이 나온다.
 새로고침하고 다시 쳐보면 JS로 id=“title”을 가진 <h1>태그를 가져오는걸 볼 수 있다.
 
 console.log 대신 console.dir을 써보면 <h1>태그로 할 수 있는 목록들이 나온다.
-
 
 요런식. <h1> title 하나에서 엄청 많은 것들을 가져올 수 있다.
 요기서 특별히 중요한 것들은 textContent의 “Grab me!” 같은 거다.
@@ -176,8 +173,7 @@ HTML에서 title을 가지고 와야하고 유저명도 가져와서 해당 titl
 	2. 이 document 항목들을 변경하는 것.
 변경하는걸 배우기 전에 먼저 JS에서 HTML을 가져올 수 있는 다른 방법들을 배울 것이다.
 
-++
-#3.2 Searching For Elements
+++ #3.2 Searching For Elements
 
 이전 영상에서 함수를 통해 id로 class name을 가져오거나 추가하고, text를 가져오거나 변경하는 방법에 대해 배웠다.
 id가 무엇이든 HTML에 정의된 id가 JS에서 같으면 상관 없다. 동일하지 않으면 못 가져온다.
