--- a/챌린지 코드 메모/5월1일.html
+++ b/챌린지 코드 메모/5월1일.html
@@ -1,6 +1,6 @@
-5월 1일
+[5월 1일]
 
-#5.0 Intervals
+++ #5.0 Intervals
 
 이번 섹션에서 할 clock부분을 시작하기 전 새로 만든 폴더들을 보자..
 파일 하나에 모든 코드 넣는걸 별로 안 좋아하기 때문에 만들었다.
@@ -19,7 +19,6 @@ h2를 받아와서 그 내부에 text를 입력하기만 하면 된다.
 
 document.querySlector에 h2와 id를 함께 사용하는 방법도 있고 id만 사용하던가 getElementById(“clock”)을 사용하는 방법도 있다.
 
-
 시계 동작 확인.
 시계는 기본값으로 00시00분을 나타내도록 하자. 기본값 설정만 그렇게 하자는 거다.
 JS이벤트가 시작하기 전에는 
@@ -29,17 +28,16 @@ JS이벤트가 시작하기 전에는
 intervals는 매번 일어나야 할 일을 말한다. 예를 들어 ‘매2초’라고 하면 이게 interval이다.
 그러니까 매 2초마다 내가 무슨 일이 일어나게 하고 싶을때 그럴때 쓰는게 interval이다.
 
-
 지금 하고싶은 건 이 함수를 매2초마다 실행하는 것이다. 다행히 JS는 이미 그 개념을 내장하고 있다.
 서버를 확인한다던가 하는 상황때문에 필요하기 때문이다.
 그 기능을 제공하는 tool이 setInterval()이다.
 setInterval은 2개의 argument를 받는다.
 첫번째 argument는 내가 실행하고자 하는 function이다.
 두번째 argument는 function 간격을 몇 ms로 할지 쓰면 된다.
-￼
+
 이러면 sayHello function을 5초에 한 번 실행시키는 것이다.
 저장하고 새로고침하면 처음엔 console에서 아무것도 보지 못할거다. 근데 5초가 지나면 console에서 첫번째 hello를 볼 수 있다.
-￼
+
 5초에 한번씩 실행중..
 이걸 이해하고 사용하는것도 너무 쉽다. setInterval()만 실행하면된다.
 
