--- a/챌린지 코드 메모/5월1일.html
+++ b/챌린지 코드 메모/5월1일.html
@@ -42,7 +42,7 @@ setInterval은 2개의 argument를 받는다.
 이걸 이해하고 사용하는것도 너무 쉽다. setInterval()만 실행하면된다.
 
 
-5.1 Timeouts and Dates
+++ #5.1 Timeouts and Dates
 
 이번에 배울건 function을 딱 한번만 호출하는건데 일정 시간이 흐른뒤에 호출하는거다.
 전에 setInterval을 했던거처럼 이번엔 setTimeout을 쓸거다.
