--- a/챌린지 코드 메모/5월1일.html
+++ b/챌린지 코드 메모/5월1일.html
@@ -101,7 +101,7 @@ New Date Object는 현재 날짜, 시간, 분, 초에 대한 정보를 가지고
 그 뒤에 setInterval에 의해서 1초마다 계속 호출하고 실행되고 있는 것이다.
 그니까 저 함수를 한번 실행한 뒤 function들이 실행되도록 코드를 짜준 것이다.
 
-#5.2 PadStart
+++ #5.2 PadStart
 
 항상 말하지만 JS세계에서 문제에 부딪힐때마다 다른 개발자들도 이미 똑같은 문제를 겪어봤을거라고 100%확신해도 된다.
 많은 개발자들이 같은 문제를 겪고 또 겪었다면 Javascript라는 언어 자체에 이미 그 작업을 수행하는 function이 있을 것이다.
@@ -114,19 +114,19 @@ New Date Object는 현재 날짜, 시간, 분, 초에 대한 정보를 가지고
 이런 상황에선 padStart()라는 function을 사용할 수 있다. 이 function은 string에 쓸 수 있는 function이다.
 예를 들어 길이가 1인 문자가 있다고 하자. 그럼 우리는 JS한테 부탁하는거다. padStart()를 써서 padding을 추가해달라고. String 앞에.
 string의 앞쪽 시작 부분을 더 늘려야하고 그렇게 해서 이 문자열의 길이가 2는 되어야 한다고 말해주는거다.
-￼
+
 만약 길이가 2가 되지 않는다면 앞쪽에 “0”을 추가하게 될거다. padStart()를 썼으니까.
 “12”같은 2자리에다가 같은 짓을 하면 보이듯이 아무일도 하지 않는다.
-￼
+
 왜냐면 string의 길이가 2이기 때문에 padStart()는 아무 작업도 하지 않는 것이다.
 이제 우린 PadStart()에 대해 알게 됐다.
 padEnd()도 있는데 이거도 같은거지만 뒤쪽에 문자를 추가하는거다.
 1이면 10 이렇게.. 01이 아니고.
-￼
+
 이런식으로 응용도 가능하다.
 매우 유용한 function.
 
-￼
+
 이렇게 작성해주자.
 이제 이렇게 하고싶은건 이렇게 사용하는게 아니고 padStart를 활용하는 것이다.
 앞쪽에 0을 추가하는게 다다.
