--- a/챌린지 코드 메모/5월 3일.html
+++ b/챌린지 코드 메모/5월 3일.html
@@ -76,25 +76,20 @@ span을 이용해서 li를 만들어하고 싶은거다. 그 이유는 나중에
 이렇게 해주면 span의 텍스트는 handleToDoSubmit에서 온 newTodo 텍스트가 되는 것이다.
 
 이제 list에 li를 놓도록 해보자.
-￼
-￼
 toDoList 완성
 
 이제 또 발생하는 문제 2가지. ToDo를 생성하면 지울수 없는거, 새로고침하면 적었던 리스트들이 사라지는것
 즉, 우리가 list에 item들을 추가할 수는 있지만, 지울 수는 없다는 것과 그것들을 어디에도 저장하지 않고 있다.
 잘 실행되는거 같지만 아직 조금 부족하다.
 
-#7.2 Deleting To Do
+++ #7.2 Deleting To Do
 
 이제 하려는건 to Do를 삭제하는 button을 추가하는 거다.
 다시 말하지만, 버튼은 당연히 JS에서 만들어질 것이다.
 그리고 모든 것들이 어떻게 보일지 디자인 해야 한다.
-￼
 현재 span들을 추가하고 button을 추가했다.
 
-￼
 동작한다..
-
 
 다시 정리.
 우린 li를 만들고, span과 button을 만들었다.
@@ -112,7 +107,7 @@ button은 span 뒤에 있게 될거다.
 우리가 해야할건 button에 click eventListener를 추가하는 거다.
 물론 function을 추가해줘야 한다. 또 다른 function을 만들어보자.
 deleteToDo는 단순히 console.log를 하게한다.
-￼
+
 작동확인.
 근데 문제는 어느 버튼을 눌렀는지 모른다는 것이다.
 모든 버튼이 같은 이벤트를 기다리고 있고, 모두 같은 function을 실행하고 있다.
@@ -127,17 +122,13 @@ console.dir을 해서 버튼의 내부를 살펴보면 많은 property가 있는
 어떤게 클릭되었는지 아는 것만으로는 충분하지 않다.
 지금 경우에 우리는 어떤게 click되었는지 알 수 있다. 그건 버튼인데,
 우리는 그것의 parentNode 혹은 parentElement를 얻고싶다.
-￼
-￼
 어떤 버튼이 눌렸는지 알 수 있게 됐다.
 
 target은 클릭된 HTML element이다.
 그리고 모든 HTML에는 property가 있다. 저건 parentElement인데,
 클릭된 element의 부모이다.
-￼
-이제 우리는 toDo를 지우고 있다.
 
-￼
+이제 우리는 toDo를 지우고 있다.
 끝!
 
 #7.3 Saving the Dos
