--- a/챌린지 코드 메모/5월 3일.html
+++ b/챌린지 코드 메모/5월 3일.html
@@ -131,15 +131,13 @@ target은 클릭된 HTML element이다.
 이제 우리는 toDo를 지우고 있다.
 끝!
 
-#7.3 Saving the Dos
+++ #7.3 Saving the Dos
 
 이제 실제로 toDo 들을 저장해 볼거다.
 localStorage로. LocalStorage에 저장하고나면 거기서 불러와서 화면이 띄우는게 목적이다.
 
 toDo들을 저장하는거 부터 시작하자.
 먼저 Array를 만들어준다.
-￼
-
 그리고 이제 newTodo가 그려질 때마다 그 텍스트를 array에 push하려한다.
 그래서, newToDo를 그리기 전에 toDos array를 가지고 와서 newTodo를 push 할거다.
 
