--- a/챌린지 코드 메모/4월 25일.html
+++ b/챌린지 코드 메모/4월 25일.html
@@ -1,6 +1,6 @@
-4월25일 챌린지 Day3
+[4월25일 챌린지 Day3]
 
-#3.0 The Document Object
+++ #3.0 The Document Object
 
 JS와 HTML이 서로 어떻게 작동하는지는 아직 보지 않았다.
 
@@ -16,7 +16,6 @@ JS를 사용하는 이유는, HTML과 상호작용하기 위해서다.
 
 즉, HTML의 Element들은 JS를 통해 변경하고 읽을 수 있다는 뜻이다.
 
-++
 가장 중요한 브라우저의 핵심 object
 콘솔에 document를 쳐보면 정의되어 있는 것을 볼 수 있다.
 
