--- a/챌린지 코드 메모/4월 25일.html
+++ b/챌린지 코드 메모/4월 25일.html
@@ -125,8 +125,7 @@ HTML에서 title을 가지고 와야하고 유저명도 가져와서 해당 titl
 2. 이 document 항목들을 변경하는 것.
 변경하는걸 배우기 전에 먼저 JS에서 HTML을 가져올 수 있는 다른 방법들을 배울 것이다.
 
-++
-#3.2 Searching For Elements
+++ #3.2 Searching For Elements
 
 이전 영상에서 함수를 통해 id로 class name을 가져오거나 추가하고, text를 가져오거나 변경하는 방법에 대해 배웠다.
 id가 무엇이든 HTML에 정의된 id가 JS에서 같으면 상관 없다. 동일하지 않으면 못 가져온다.
