--- a/챌린지 코드 메모/4월 25일.html
+++ b/챌린지 코드 메모/4월 25일.html
@@ -183,9 +183,7 @@ querySelector를 사용할 때, hello class 안에 h1이 많을 수도 있다.
 querySelectorAll은 3개의 h1이 들어있는 array를 가져다 줄 것이다. (조건에 부합하는 모든 element)
 H1:first-child 같이 사용할 수도 있다는 뜻.
 
-
-++
-#3.3 Events
+++ #3.3 Events
 
 꼭 이해해야 할 것은 app.js가 있기 때문에 JS를 통해 HTML의 내용을 가져올 수 있다는 것이다.
 우리가 app.js를 import하지 않았다면, 당연히 document는 여기 존재할 수도 없었다.
