--- a/챌린지 코드 메모/4월 25일.html
+++ b/챌린지 코드 메모/4월 25일.html
@@ -268,8 +268,7 @@ Click event를 listen하기 위해서는 HTML element를 가져와서 addEventLi
 그리고 유저가 이 element에 해당 event를 했을때 어떤 함수를 실행 할지도 정해야한다.
 그리고 여기서 이 function의 실행버튼을 눌러선 안되고.
 
-++
-#3.4 Events part II
+++ #3.4 Events part II
 
 listen하고 싶은 event를 찾는 가장 좋은 방법은 구글의 찾고싶은 element의 이름
 예를 들어 h1 element를 MDN에 검색해보는 것이다.
@@ -295,8 +294,7 @@ Function 이름은 굳이 handtiteclick  이런식으로 짓지 않아도 된다
 그리고 이 function을 여기 addEventListener에게 전달해 줄 것이다.
 테스트 해보면 JS가 두 event를 listen하고 있는 것을 볼 수 있다.
 
-++
-#3.5 More Events
+++ #3.5 More Events
 
 event들은 그저 클릭,엔터, 리브 정도만 처리하는게 아니기 때문에 더 알 필요가 있다.
 해볼라고 하는건 window의 interface 또는 object이다.
