--- a/챌린지 코드 메모/4월26일.html
+++ b/챌린지 코드 메모/4월26일.html
@@ -1,7 +1,6 @@
-4월 26일 챌린지
+[4월 26일 챌린지]
 
-++
-#3.6 CSS in JaveScript
+++ #3.6 CSS in JaveScript
 
 사용했었던 event listener들을 모두 지우고 시작할거다. 
 이제 handleTitleClick function에 초점을 맞출 것이기 때문이다.
