--- a/챌린지 코드 메모/4월26일.html
+++ b/챌린지 코드 메모/4월26일.html
@@ -14,8 +14,7 @@ Blue, tomato,blue,tomato 이런식으로..
 function에서 첫번째 color를 획득할 수 있다.
 두번째, h1의 색상을 설정할 수 있다.
 세번째, h1	의 색상을 다시 가지고 온다.
-다시,
-검사했을때 만약 h1.style.color가 blue라면 이걸 tomato로 변경해주세요라고 하는것이다.
+다시 검사했을때 만약 h1.style.color가 blue라면 이걸 tomato로 변경해주세요라고 하는것이다.
 그리고 만약 h1.style.color가 blue 색깔이 아니라면, blue로 변경해주세요라고 하는거다.
 이건 굉장히 간단하다. If활용.
 
@@ -32,10 +31,7 @@ false라면 blue로 바꿀 것이다.
 하지만 우리는 코드를 개선해서 더 깔끔하게 만들 수 있다.
 
 h1.style.color.를 이렇게 많이 호출하기 보다는 먼저 이 color 현재 상태 저장하는걸 배워보자.
-
-
 이게 첫번째.
-
 그리고 h1 두줄도 바꾸자.
 
 NewColor는 아무것도 없는 비어있는 let 변수이다.
@@ -43,9 +39,7 @@ NewColor는 아무것도 없는 비어있는 let 변수이다.
 만약 currentColor가 blue라면, newColor는 tomato로 변경해 줄거다.
 그리고 else라면 newColor는 blue가 되어야겠지.
 
-
 newColor를 변경해봤자, 우리의 h1의 color엔 아무 영향도 미치지 않는다.
-
 
 최종 코드다.
 이러면 읽을때 훨씬 보기 좋다. 우리가 뭘 할라고 하는지, 우리가 왜 color를 변경하려고 하는지 이해할 수 있다.
@@ -61,8 +55,7 @@ Step 2. event를 listen 해라
 Step 3. 그 event에 반응해라
 반응이란건 뭔가 보여주거나 감추거나 색깔을 바꾼다는 것등과 같다.
 
-++
-#3.7 CSS JavaScript Part II
+++ #3.7 CSS JavaScript Part II
 
 우린 application의 스타일링을 더 잘할 수 있다고 했다.
 지금은 style이 JS에서 변경되고 있는데 이건 별로 스마트하지 않다.
