--- a/챌린지 코드 메모/4월26일.html
+++ b/챌린지 코드 메모/4월26일.html
@@ -139,8 +139,7 @@ sexy-font를 간직하고 싶은데 말이다.
 
 우리가 정말 해줘야 하는건 JS로 모든 class name을 변경하지는 않는 것이다.
 
-++
-#3.8 CSS in JavaScript part III
+++ #3.8 CSS in JavaScript part III
 
 이제 element에서 class name을 변경하고, 제고하고, 추가하는지에 대해 배웠다.
 위에 다뤘던 버그는 우리가 만약 class name을 빈값 혹은 clickedClass로 바꾸면
