--- a/챌린지 코드 메모/4월27일.html
+++ b/챌린지 코드 메모/4월27일.html
@@ -1,7 +1,6 @@
 [4월29일]
 
-++
-#.4.0 Input Values
+++ #.4.0 Input Values
 
 이제 앱을 한번 만들어보자. 
 CSS랑 JS 완전히 지우고 시작하자
@@ -83,8 +82,7 @@ Hello뒤에 아무것도 없는 채로 콘솔에 표시되는걸 볼 수 있다.
 우리는 유저가 이름을 입력했을 때만 버튼을 클릭할 수 있도록 하고 싶어한다.
 수많은 if else를 활용해서 뭘 할 수 있을지 살펴보자
 
-++
-#4.1 Form Submission
+++ #4.1 Form Submission
 
 이번엔 username의 유효성을 검사할 것이다. 우선 Username이 비어있으면 안되고, 너무 긴 Username도 안된다. 좀 더 확실하게 하기 위해서다.
 매번 loginInput.value를 적는거 대신 우리는 const로 변수로 만들어 줄 것이다.
