--- a/챌린지 코드 메모/4월27일.html
+++ b/챌린지 코드 메모/4월27일.html
@@ -227,8 +227,7 @@ Submit event가 발생할때 JS는 onLoginSubmit function을 호출하고 있고
 기본동작이 실행되는걸 막아주고 있다.
 아직 좀 헷갈릴 수 잇다. 이제 가장 기본적인 동작을 막아볼텐데, 그 중  링크를 클릭하는 동작이다.
 
-++
-#4.3 Events part II
+++ #4.3 Events part II
 
 이번엔 from 관련 내용으로 쉬어가는 코너이다. 어렵기 때문에.
 Nomadcoders.co로 연결되는 anchor요소를 하나 만들어 줄 것이다.
@@ -242,7 +241,6 @@ Nomadcoders.co로 연결되는 anchor요소를 하나 만들어 줄 것이다.
 
 링크도 하나뿐이고 설명하는 용도니까 이렇게 써도 별 상관없다.
 특별히 뭔하 하지 않을 것이다. event를 위한 자리를 만들던가 하는거 말이다. alert만 추가해 줄거다.
-
 
 alert가 이 페이지가 다른 동작을 하지 못하도록 막고 있다. 아무일도 안 일어나고 있지만 확인을 눌러서 alert가 없어지면 이 브라우저의 기본동작이 실행되는걸 볼 수 있다.
 alert는 특이한 애라 모든 동작들을 막는다. 그래서 이제 아무도 alert를 사용하지 않는다.
@@ -277,8 +275,7 @@ path를 보면 우리가 클릭할 때 무슨 일이 있었는지, 어디서 발
 이게 이벤트를 활용하는 방법이고 preventDefault();를 사용하는 이유다.
 가장 중요한건 addEventListener안에 있는 함수는 직접 실행하지 않았다는 것이다.
 
-++
-#4.4 Getting Username
+++ #4.4 Getting Username
 
 이제 우리가 하고 싶은건 유저가 이름을 제출하면, form을 없애주는걸 하고 싶다.
 이걸 구현하기 위한 방법
@@ -288,12 +285,10 @@ path를 보면 우리가 클릭할 때 무슨 일이 있었는지, 어디서 발
 단순히 hidden이라는 classname을 더해주면 된다.
 
 우리는 유저가 이름을 form을 통해 제출했을 때, 기본동작은 막아주면서 내용은 기록하는것
-
 이렇게 입력하고 테스트해보면 form은 사라졌지만 입력값은 console에 기록된걸 볼 수 있다.
 
 이제 다른 요소를 추가해보자. 이 요소는 h1이고 내용은 비워둘거다. 비워둔 채로 둘거지만 h1이 될 것이다.
 그리고 이 h1은 기본값으로 hidden이라는 class name을 갖게 될 것이다. 
-
 
 새로고침하고 body를 확인해보면 form이 있고 h1도 있는데 h1은 숨겨져있는걸 볼 수 있다.
 이제 할일은 form은 숨기고 h1은 표시되도록 하는 것이다.
@@ -302,16 +297,13 @@ path를 보면 우리가 클릭할 때 무슨 일이 있었는지, 어디서 발
 기본동작은 실행되지 않도록 막아주고, hidden이라는 class name을 더해줘서 form을 숨기고, 유저의 이름을 변수로 저장해주고, 그 이름은 h1안에 넣어줄거다.
 
 일단 greeting이란 id를 추가해줄 것이다.
-
 그리고 다시 JS로 돌아와서 이 id를 찾아줄 것이다.
-
 이럼 준비가 거의 다 됐다. 하나 빼먹은게 있다.
 
 Css까지.
 이러고 실행시켜보면 form이 숨겨지는걸 볼 수 있다.
 
 element를 살펴보면
-
 class=“hidden”이 추가됐고 h1 안에는 “Hello Nico”가 들어갔다.
 잘 작동하는데 또 h1에서 hidden class 빼는걸 깜빡했다.
 
