--- a/챌린지 코드 메모/4월27일.html
+++ b/챌린지 코드 메모/4월27일.html
@@ -338,7 +338,7 @@ HTML을 살펴보면 단순히 classname을 추가해주고 삭제하고 할 뿐
 근데 문제는 우리가 유저를 전혀 기억할 수 없다는 것이다. 새로고침 할때마다 새로 로그인해야한다.
 새로고침할 때도 form을 볼 필요 없이 이름이 저장되어 있으면 좋겠다. 그걸 다음 강의에서 할거다.
 
-#4.5 Saving Username
+++ #4.5 Saving Username
 
 유저에게 매번 질문하기 번거롭기 때문에 value를 기억하는 방법을 배운다.
 항상 그랬듯이 뭔가를 저장하는건 아주 많이 사용되는 기능이다. 유저의 이름이나 뭐가 되던간에.
@@ -388,8 +388,7 @@ JS에서 localStorage.setItem을 적어준다. 우선 저장될 값의 이름(ke
 이제 우리는 local storage에 username이 존재하는지 확인하고, form을 표시하지 않을 거다. 그런 경우 우리는 h1요소가 표시되도록 할거다.
 만약 local storage에 유저정보가 없다면 form이 먼저 표시되도록 할거다.
 
-++
-#4.6 Loading Username
+++ #4.6 Loading Username
 
 Local storage에 유저정보가 있으면 form을 보여주면 안된다.
 우리는 H1 요소를 보여줘야 한다. 
