--- a/챌린지 코드 메모/4월27일.html
+++ b/챌린지 코드 메모/4월27일.html
@@ -442,10 +442,10 @@ form이 표시됐다. 완벽하다!
 하지만 아주 작은 문제점이 있다.
 똑같은 동작을 2번 반복하고 있다는 것이다.
 우린 greeting.innerText랑 greeting.classList.remove를 반복하고 있다.
-그래서 어쩌면 이걸 함수로 만드는게 나을 수도 있다고 생각한다.
+그래서 어쩌면 이걸 함수로 만드는게 나을 수도 있다고 생각한다
+
 
 그럼 paintGreetings라는 함수를 만들어보자.
-
 이 작업을 수행할텐데, username은 argument에서 가져올거고 
 원래 else에 있던 애들은 paintGreetings함수를 호출해주면 된다. 인자로 savedUsername 넣어주고.
 이렇게 해서 코드를 2줄 더 적게 적어줄 수 있다.
